better handling for long titles, don't stretch small images, fix orientation

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -19,6 +19,12 @@ footer {
     width: 100%;
     height: 45px;
     line-height: 45px;
+}
+
+div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 p,
 ul {
